WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123831
REGRESSION (
r154375
): Image is oriented incorrectly
https://bugs.webkit.org/show_bug.cgi?id=123831
Summary
REGRESSION (r154375): Image is oriented incorrectly
Tim Horton
Reported
2013-11-05 14:46:18 PST
Somehow,
http://trac.webkit.org/changeset/154375
caused some images to be incorrectly oriented. Steps to Reproduce: 1. Go to
http://www.dpreview.com/galleries/reviewsamples/photos/2736127/pa275561?inalbum=olympus-stylus-1-preview-samples
in Safari with ToT WebKit. 2. Click on the eighth picture (the one of the car). 3. Click "original" in the size chooser below. You'll be taken to an ImageDocument. Expected: The image should load in the correct orientation, car right-side-up, as it did before this revision. Actual: The image loads sideways, and squished. Unclear to me how this broke without breaking any tests. <
rdar://problem/15352728
>
Attachments
Patch
(3.01 KB, patch)
2013-11-07 01:03 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2013-11-05 17:07:10 PST
Let me take a look this issue.
Gyuyoung Kim
Comment 2
2013-11-07 01:03:58 PST
Created
attachment 216272
[details]
Patch
Gyuyoung Kim
Comment 3
2013-11-07 01:05:49 PST
In
r154375
, I missed to set shouldRespectImageOrientation value when css-image-orientation is disabled. This patch fixes it.
Tim Horton
Comment 4
2013-11-07 16:57:49 PST
(In reply to
comment #0
)
> Unclear to me how this broke without breaking any tests.
Do you plan to resolve this part too?
Gyuyoung Kim
Comment 5
2013-11-07 19:27:05 PST
(In reply to
comment #4
)
> (In reply to
comment #0
) > > Unclear to me how this broke without breaking any tests. > > Do you plan to resolve this part too?
Let me check why there was no break in layout test.
WebKit Commit Bot
Comment 6
2013-11-07 19:53:30 PST
Comment on
attachment 216272
[details]
Patch Clearing flags on attachment: 216272 Committed
r158900
: <
http://trac.webkit.org/changeset/158900
>
WebKit Commit Bot
Comment 7
2013-11-07 19:53:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug