REGRESSION (r154375): Image is oriented incorrectly https://bugs.webkit.org/show_bug.cgi?id=123831

Reviewed by Antonio Gomes.

r154375 made that shouldRespectImageOrientation() isn't used by drawImage().
It causes an image isn't oriented correctly. This patch sets shouldRespectImageOrientation()
value by default.

* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintReplaced):
(WebCore::RenderImage::paintIntoRect):


Canonical link: https://commits.webkit.org/142207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158900 268f45cc-cd09-0410-ab3c-d52691b4dbfc